# gnome-colored-borders

./: CMakeLists.txt  README.md  colored-border.c  extension.js  gtkx11window.c  metadata.json  redborder.js  simple  simple.c  xmbed.c
GTK module vala/src/: Module.vala
colored-border@mr-sour/: README.md  extension.js
gtk-module-c/: Makefile  README.md
src/: Module.vala  lib.vala
